# LaCogito

./: .gitignore  BUILDING.md  CMakeLists.txt  CONTRIBUTORS.md  README.md  conanfile.py
cmake/: FindGuile.cmake
conan/profiles/: macos-x86_64
doc/: Doxyfile
scripts/: format_all.sh
src/: CMakeLists.txt
src/common/json/: jsonizable.h
src/common/memory/: esft.h
src/core/: CMakeLists.txt  category.cc  category.h  category_manager.h  cogito.cc  cogito.h  concept.cc  concept.h  concept_repr.h  context.h  element.cc  element.h  entity.cc  entity.h  event.h  lineagable.h  lineage.cc  lineage.h  relation.cc  relation.h  relation_boundable.cc  relation_boundable.h  role.h
src/core/link/: CMakeLists.txt  link.h
src/core/tests/: CMakeLists.txt  example.cpp
src/proto/api/: cogitobase.proto
tests/: CMakeLists.txt  guile_c.cc
